# modflow6

./: .gitignore  .gitlab-ci.yml  CITATION.cff  DEVELOPER.md  README.md  asv.conf.json  code.json  environment.yml  meson.build  meson.options  pixi.toml  version.txt
.asv/results/: benchmarks.json
.asv/results/IGSAAA071L00467/: machine.json
.github/actions/: action.yml
.github/common/: arch-ci-mswin-gnu.py  compile_modflow6.bat
.github/compat/: comp.csv  comp.md  test.csv  test.md
.github/workflows/: ci-check-warnings-gfortran.yml  ci-large-tests.yml  ci-tests-gfortran-latest.yml  ci-tests-gfortran-previous.yml  ci-tests-ifort.yml  ci.yml  compilers.yml  docs.yml  prt.yml  release.yml  release_dispatch.yml  reset.yml
.hpc/: cray-hovenweep-meson-build.slurm.batch  cray-meson-build.slurm.batch  update-module.slurm.batch
autotest/: TestArrayUtil.f90  TestGeomUtil.f90  TestInputOutput.f90  TestMathUtil.f90  TestPeriodBlockTiming.f90  TestTimeStepSelect.f90  benchmarks.py  build_exes.py  channel_utils.py  conftest.py  cross_section_functions.py  driver.f90  framework.py  get_exes.py  meson.build  prt-regional.py  prt-tetratech.py  prt_test_utils.py  prt_track_utils.py  pytest.ini  test_ArrayHandlers.F90  test_Demo.F90  test_GenericUtils.F90  test_InputOutput.F90  test_List.F90  test_Sim.F90  test_channel_utils.py  test_cli.py  test_examples.py  test_gwe_cnd.py  test_gwe_drycell_cnd0.py  test_gwe_drycell_cnd1.py  test_gwe_drycell_cnd2.py  test_gwe_esl01.py  test_gwe_esl02.py  test_gwe_esl_analyt_sln.py  test_gwe_lke_conduction.py  test_gwe_mwe_conduction.py  test_gwe_sfe_strmbedcond.py  test_gwe_split_analyt.py  (+274 more)
autotest/__snapshots__/test_prt_dry/: test_mf6model[4-prtdry_stay].npy
autotest/prt/: prt_test_utils.py  test_prt_disv.py  test_prt_drape.py  test_prt_exg.py  test_prt_exg01.py  test_prt_fmi.py  test_prt_fmi01.py  test_prt_fmi02.py  test_prt_fmi03.py  test_prt_fmi04.py  test_prt_fmi05.py  test_prt_fmi06.py  test_prt_fmi07.py  test_prt_fmi08.py  test_prt_fmi09.py  test_prt_fmi10.py  test_prt_notebooks.py  test_prt_release_timing.py  test_prt_stop_zones.py  test_prt_track_events.py  test_prt_triangle.py  test_prt_voronoi.py  test_prt_voronoi01.py  test_prt_voronoi02.py  test_prt_weak_sinks.py
autotest/scripts/: channel_utils.py  test_channel_utils.py
distribution/: README.md  build_dist.py  build_docs.py  build_makefiles.py  update_version.py
doc/: version.py  version.tex
doc/ReleaseNotes/: develop.tex
doc/mf6io/: body.tex
doc/mf6io/mf6ivar/: mf6ivar.py
doc/mf6io/prt/: fmi.tex  oc.tex  prt.tex
make/: makedefaults  makefile
msvs/: mf6core.vfproj  mf6lib.vfproj
pymake/: makefile
src/: ExchangeFactory.f90  ExchangeFactory.fypp  IdmDfnSelector.f90  IdmDfnSelector.fypp  IdmModelPackageInput.f90  IdmModelPackageInput.fypp  ModelFactory.f90  ModelFactory.fypp  ModelsCreate.f90  ModelsCreate.fypp  Simulation.f90  SimulationCreate.F90  SimulationCreate.f90  meson.build  mf6core.f90
src/Distributed/: IndexMap.f90  InterfaceMap.f90  MpiRouter.f90  VirtualBase.f90  VirtualDataManager.f90
src/Exchange/: DisConnExchange.f90  GwfGwfExchange.f90  GwfPrtExchange.f90  GwtGwtExchange.f90
src/GWF/: VirtualGwfExchange.f90  exg-gwfgwf.f90  meson.build
src/GWT/: exg-gwtgwt.f90  meson.build
src/IDM/: IdmDfnSelector.f90  IdmDfnSelector.fypp  meson.build  prt-mipidm.f90
src/IDM/selector/: IdmDfnSelector.f90
src/Model/: BaseModel.f90  ExplicitModel.f90  NumericalModel.f90  TrackingModel.f90
src/Model/Connection/: GwfGwfConnection.f90  GwtGwtConnection.f90
src/Model/GroundWaterEnergy/: gwe-lke.f90  gwe-mwe.f90  gwe-sfe.f90  gwe-uze.f90
src/Model/GroundWaterFlow/: gwf-lak.f90  gwf3.f90  gwf3csub8.f90  gwf3dis8.f90  gwf3disv8.f90  gwf3evt8.f90  gwf3lak8.f90  gwf3mvr8.f90  gwf3npf8.f90  gwf3rch8.f90  gwf3uzf8.f90
src/Model/GroundWaterTransport/: gwt-lkt.f90  gwt-mwt.f90  gwt-sft.f90  gwt-uzt.f90  gwt1.f90
src/Model/ModelUtilities/: BoundaryPackage.f90  BoundaryPackageExt.f90  Connections.f90  FlowModelInterface.f90  GwtSpc.f90  ModelPackageInput.f90  TimeSelect.f90  TimeStepSelect.f90  TrackData.f90
src/Model/ParticleTracking/: prt-prp.f90  prt.f90  prt1.f90  prt1dis1idm.f90  prt1disv1idm.f90  prt1fmi1.f90  prt1idm.f90  prt1mip.f90  prt1mip1idm.f90  prt1obs1.f90  prt1oc1.f90  prt1prp1.f90
src/Model/SurfaceWaterFlow/: swf.f90
src/Model/TransportModel/: tsp-apt.f90  tsp1.f90  tsp1mvt1.f90
src/PRT/: VirtualPrtExchange.f90  VirtualPrtModel.f90  exg-gwfprt.f90  meson.build  prt-mip.f90  prt-prp.f90  prt.f90
src/PRT/ParticleTracker/: Method.f90  MethodCellPollockQuad.f90  MethodCellPool.f90  MethodCellTernary.f90  MethodDis.f90  MethodSubcellPool.f90  Particle.f90  TrackData.f90
src/Solution/: ExplicitSolution.f90  NumericalSolution.f90  SolutionGroup.f90
src/Solution/LinearMethods/: ims8base.f90  ims8linear.f90
src/Solution/ParticleTracker/: Cell.f90  CellDefn.f90  CellPoly.f90  CellRect.f90  CellRectQuad.f90  CellUtil.f90  GlobalData.f90  Method.f90  MethodCellPassToBot.f90  MethodCellPollock.f90  MethodCellPollockQuad.f90  MethodCellPool.f90  MethodCellTernary.f90  MethodDis.f90  (+18 more)
src/Timing/: tdis.f90
src/Utilities/: ArrayHandlers.f90  ArrayUtil.f90  BlockParser.f90  FileUtil.f90  GeomUtil.f90  GridFileReader.f90  InputOutput.f90  List.f90  ListReader.f90  MathUtil.f90  Message.f90  PeriodBlockTiming.f90  STLVecInt.f90  Sim.f90  SimFileUnit.f90  SimVariables.f90  Timer.f90  comarg.f90  defmacro.F90  genericutils.f90  sort.f90  version.f90
srcbmi/: mf6bmiGrid.f90  mf6bmiUtil.f90
utils/idmloader/: dfns.txt
utils/mf5to6/: meson.build
(+56 files in other folders)
