option('extended', type : 'boolean', value : false, description : 'Extended build with external libraries')
option('parallel', type : 'boolean', value : false, description : 'Extended parallel build')
option('mpich', type : 'boolean', value : false, description : 'Use MPICH version of MPI')
option('cray', type : 'boolean', value : false, description : 'Extended build on CRAY with MPICH')
option('buildname', type : 'string', value : 'mf6', description : 'Optional build name')
option('numerical-models', type : 'array', value : ['gwf', 'gwt'], description : 'Numerical models to support')
option('explicit-models', type : 'array', value : [], description : 'Explicit models to support')
option('exchanges', type : 'array', value : ['gwf-gwf', 'gwt-gwt', 'gwf-gwt'], description : 'Exchanges to support')