modflow_sources += files(
  'gwt1.f90',
  'gwt1cnc1.f90',
  'gwt1cnc1idm.f90',
  'gwt1dis1idm.f90',
  'gwt1disu1idm.f90',
  'gwt1disv1idm.f90',
  'gwt1dsp1.f90',
  'gwt1dsp1idm.f90',
  'gwt1ic1idm.f90',
  'gwt1idm.f90',
  'gwt1ist1.f90',
  'gwt1lkt1.f90',
  'gwt1mst1.f90',
  'gwt1mwt1.f90',
  'gwt1sft1.f90',
  'gwt1src1.f90',
  'gwt1uzt1.f90',
  'gwfgwtidm.f90',
  'gwtgwtidm.f90',
  'GwfGwtExchange.f90',
  'GwtGwtExchange.f90',
  'VirtualGwtExchange.f90',
  'VirtualGwtModel.f90',
  'VirtualGwtExchange.f90',
  'VirtualGwtModel.f90',
  'GwtGwtConnection.f90',
  'GwtInterfaceModel.f90',
  'GwtDspOptions.f90',
  'GwtSpc.f90',
)