modflow_sources += files(
  'exg-gwfgwfidm.f90',
  'gwf-drnidm.f90',
  'gwf-rchaidm.f90',
  'gwt-disvidm.f90',
  'exg-gwfgwtidm.f90',
  'gwf-evtaidm.f90',
  'gwf-rchidm.f90',
  'gwt-dspidm.f90',
  'exg-gwtgwtidm.f90',
  'gwf-evtidm.f90',
  'gwf-rividm.f90',
  'gwt-icidm.f90',
  'gwf-chdidm.f90',
  'gwf-ghbidm.f90',
  'gwf-welidm.f90',
  'gwt-namidm.f90',
  'gwf-disidm.f90',
  'gwf-icidm.f90',
  'gwt-cncidm.f90',
  'gwf-disuidm.f90',
  'gwf-namidm.f90',
  'gwt-disidm.f90',
  'sim-namidm.f90',
  'gwf-disvidm.f90',
  'gwf-npfidm.f90',
  'gwt-disuidm.f90',
  'prt-disidm.f90',
  'prt-disvidm.f90',
  'prt-mipidm.f90',
  'prt-namidm.f90',
  'exg-gwfprtidm.f90'
)