modflow_sources += files(
  'prt.f90',
  'prt-fmi.f90',
  'prt-mip.f90',
  'prt-obs.f90',
  'prt-oc.f90',
  'prt-prp.f90',
  'exg-gwfprt.f90',
  'VirtualPrtExchange.f90',
  'VirtualPrtModel.f90',
  'ParticleTracker' / 'Cell.f90',
  'ParticleTracker' / 'CellDefn.f90',
  'ParticleTracker' / 'CellPoly.f90',
  'ParticleTracker' / 'CellRect.f90',
  'ParticleTracker' / 'CellRectQuad.f90',
  'ParticleTracker' / 'CellUtil.f90',
  'ParticleTracker' / 'Method.f90',
  'ParticleTracker' / 'MethodCellPollock.f90',
  'ParticleTracker' / 'MethodCellPollockQuad.f90',
  'ParticleTracker' / 'MethodCellPool.f90',
  'ParticleTracker' / 'MethodCellTernary.f90',
  'ParticleTracker' / 'MethodDis.f90',
  'ParticleTracker' / 'MethodDisv.f90',
  'ParticleTracker' / 'MethodPool.f90',
  'ParticleTracker' / 'MethodCellPassToBot.f90',
  'ParticleTracker' / 'MethodSubcellPollock.f90',
  'ParticleTracker' / 'MethodSubcellPool.f90',
  'ParticleTracker' / 'MethodSubcellTernary.f90',
  'ParticleTracker' / 'Particle.f90',
  'ParticleTracker' / 'Subcell.f90',
  'ParticleTracker' / 'SubcellRect.f90',
  'ParticleTracker' / 'SubcellTri.f90',
  'ParticleTracker' / 'TernarySolveTrack.f90',
  'ParticleTracker' / 'TrackData.f90',
)